crystal-facet-uml (1.55.2) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * ...

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 06 Jan 2024 10:00:00 +0100

crystal-facet-uml (1.55.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Diagram descriptions can be 8191 bytes long, not reduced by SQL overhead
  * Too long entered texts are not cut in the middle of an utf8 code point

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sat, 06 Jan 2024 10:00:00 +0100

crystal-facet-uml (1.55.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * readme.markdown renamed to README.md
  * license.txt renamed to LICENSE.txt
  * moved installation_linux/ to installation/linux
  * moved installation_win/ to installation/win
  * moved user_doc/crystal-facet-uml.1.gz to installation/linux/
  * moved user_doc/crystal-facet-uml_documentation.pdf to installation/
  * -DCFU_USE_GTK4=ON is default cmake option now
  * a couple of static code analysis findings are addressed

 -- Andreas Warnke <cfu@andreaswarnke.de>  Fri, 29 Dec 2023 11:00:00 +0100

crystal-facet-uml (1.54.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * The json export creates a schema file that explains the json format
  * The html export is html5 compliant and creates nav, main and article tags
  * The html+docbook(db) export lists diagrams where classifiers appear
  * The html+db export show stereotypes and relationship-type specific arrows

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 10 Dec 2023 12:00:00 +0100

crystal-facet-uml (1.53.1) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * uncritical compiler warnings on enum/int type mismatches fixed

 -- Andreas Warnke <cfu@andreaswarnke.de>  Sun, 29 Oct 2023 07:00:00 +0100

crystal-facet-uml (1.53.0) UNRELEASED; urgency=medium

  [ Andreas Warnke ]
  * Relationships draw stereotypes as text if no image is defined
  * Default relationship type from SUBSYSTEM is ASSOCIATION, not CONTAINMENT