@@ -45,7 +45,6 @@ ideas for future versions:
   [ ] json export declares "type": "DecisionNode" even if type is ChoiceNode (statemachine)
   [ ] json export: determining if statemachine_context - is a good guess but not 100% correct
   [ ] add test case for opening non-cfuJ files
-! [ ] when loading a .tmp-cfu file, restore the right .cfuJ file - not a guessed file name
   @data
   [ ] some diagrams exist for completeness only - but do not contain important information. These shall be greyed out.
       --> use the "display_flags" field of "diagrams"
